Fix footer with y overflow on mobile

--- a/war/css/footer.css
+++ b/war/css/footer.css
@@ -13,6 +13,7 @@ html, body { height: 100%; } /* The html and body elements cannot have any paddi
 #footer {
 	background-color: #eee;
 	height: auto;
+	max-width: 105%;
 }
 
 /* Lastly, apply responsive CSS fixes as necessary */
